# HW2

./: .env  README.md  pyproject.toml  rag_poc_app.py
.streamlit/: config.toml
HW2/: rag_poc_app.py
chroma/: chroma.sqlite3
chroma_db/e4cb2f2b-37e5-4ca3-a1a3-66b0c1b5dbc2/: index_metadata.pickle
faiss_db/: faiss.index  meta.pkl
logs/: rag_interactions.jsonl
src/: rag_system.py
