[project]
name = "hw2"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohammad Taradeh (PDF)",email = "mohammad.taradeh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "streamlit (>=1.49.1,<2.0.0)",
    "langchain-openai (>=0.3.33,<0.4.0)",
    "tiktoken (>=0.11.0,<0.12.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "chromadb (>=1.1.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "hw2", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
