
[project]
name = "hw2"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohammad Taradeh (PDF)",email = "mohammad.taradeh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "tiktoken (>=0.11.0,<0.12.0)",
    "streamlit (>=1.49.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "openai (>=1.109.0,<2.0.0)",
    "chromadb (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
