[tool.poetry]
name = "HW2"
version = "1.0.0"
description = "RAG System with OpenAI Assistants SDK and FAISS Backend"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<=3.12"
streamlit = "^1.28.0"
openai = "^1.3.0"
openai-agents = "^0.1.0"
pypdf2 = "^3.0.1"
faiss-cpu = "^1.7.4"
numpy = "^1.24.0"
tiktoken = "^0.5.1"
python-dotenv = "^1.0.0"
scikit-learn = "^1.3.0"
pandas = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
pre-commit = "^3.4.0"

[tool.poetry.scripts]
rag-system = "rag_system:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]